# RootFinding

./: CombinedNotebook.ipynb  README.md  parallel_solve_time_data.ipynb  pyproject.toml  requirements.txt  requirements_dev.txt
.github/: dependabot.yml
.github/workflows/: Unit_Tests.yml  Yroots_CI.yml  docs.yml
Applications/: Equilibrium Points.ipynb
_archive/_old_code/: gen_random_tests.py  maxdeg_testing.py  qrt_test_scripts.py
docs/source/: ChebyshevApproximator.rst  ChebyshevSubdivisionSolver.rst  CombinedSolver.rst  MultiCheb.rst  MultiPower.rst  QuadraticCheck.rst  conf.py  index.rst  modules.rst
tests/: test_BoundingIntervalLinearSystem.py  test_Combined_Solver.py  test_Combined_Solver_COO.py  test_CooCheb.py  test_CooPolynomial.py  test_CooPower.py  test_LinearProjection.py  test_SubdivisionSolverCOO.py  test_cheb.py  test_convert.py  test_parallelization.py  test_polyroots.py  test_subdivision.py  test_transformChebCOO.py  test_trimMs.py
yroots/: ChebyshevApproximator.py  ChebyshevSubdivisionSolver.py  ChebyshevSubdivisionSolverCOO.py  ChebyshevSubdivisionSolverCOO_OLD.py  Combined_Solver.py  QuadraticCheck.py  QuadraticCheckCOO.py  __init__.py  polynomial.py  polyroots.py
yroots/pre-parallel_yroots_Jan_1_2026/: Combined_Solver.py
