[project]
name = "rootfinding"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "matplotlib>=3.10.9",
    "mpmath>=1.3.0",
    "numba>=0.65.1",
    "numpy>=2.4.6",
    "scipy>=1.17.1",
    "sympy>=1.14.0",
]

[dependency-groups]
dev = [
    "pytest>=9.0.3",
]
