[project]
name = "yroots"
version = "0.1.0"
description = "Numerical rootfinding for multivariate systems of equations"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "matplotlib",
    "mpmath",
    "numba>=0.65.1",
    "numpy>=2.4.4",
    "scipy>=1.17.1",
    "sympy>=1.12",
]

[dependency-groups]
dev = [
    "pytest>=9.0.3",
]