[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "yroots"
version = "0.1.0"
description = "Numerical rootfinding for multivariate systems of equations"
license = "MIT"
authors = [{ name = "Tyler Jarvis", email = "jarvis@math.byu.edu" }]
keywords = ["rootfinding"]
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Intended Audience :: Developers",
    "Natural Language :: English",
]
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "matplotlib",
    "mpmath",
    "numba>=0.65.1",
    "numpy>=2.4.4",
    "scipy>=1.17.1",
    "sympy>=1.12",
]

[project.urls]
Repository = "https://github.com/tylerjarvis/RootFinding"

[dependency-groups]
dev = [
    "pytest>=9.0.3",
]
docs = [
    "sphinx>=8.0",
]

[tool.hatch.build.targets.wheel]
packages = ["yroots"]